Thu Nov  2 11:57:37 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Makefile:
        * tests/Makefile:
        * examples/Makefile:
          Enable the RMCast library, tests and examples by default.

Wed Nov  1 17:24:59 2000  Pradeep Gore  <pradeep@cs.wustl.edu>

        * tests/RMCast/Makefile.bor:
          Added Makefile, thanks to Christopher Kohlhoff
          <chris@kohlhoff.com> and Johnny.Willemsen <Johnny.Willemsen@meco.nl>
          for contributing.

Wed Nov  1 14:11:48 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/*.h:
          Change all the header files to generate better docs with
          Doxygen.  Thanks to Darrell for his wonderful script to automate
          this process.

Tue Oct 31 19:01:19 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * netsvcs/lib/Client_Logging_Handler.cpp (handle_input): Added
          a comment explaining why we don't go to heroic lengths to recv()
          all the data if it fails after the second recv().  Thanks to
          Steve Sivier <Steven.Sivier@Eng.Sun.COM> for motivating this.

Tue Oct 31 14:21:11 2000  David L. Levine <levine@cs.wustl.edu>

        * bin/check_build_logs: sort the output file names, so
          that guajira's cxx build shows up first (locally).
          Limit total number of lines to 2000 to keep below
          majordomo's size limit.

Tue Oct 31 10:54:42 2000 Darrell Brunsch <brunsch@uci.edu>

        * ace/Process.i:

          Changed the CREATE_UNICODE_ENVIRONMENT section to be only
          in ACE_WIN32 environments.

Tue Oct 31 11:35:31 2000  Balachandran Natarajan  <bala@cs.wustl.edu>

        * ace/config-sunos5.5.h:
        * ace/Log_Msg.cpp: Added patches provided by Russ. Bugzilla id 710.

Tue Oct 31 08:14:33 2000  Chris Cleeland  <cleeland_c@ociweb.com>

        * wrapper_macros.GNU:

          Set defaults for exceptions, rtti, and fast to all be zero
          (0),i.e., off.  Henceforth, if you're creating a new port and