@@ -32,19 +32,19 @@ public:
 
   enum
   {
+    /// Maximum size of a logging message.
     MAXLOGMSGLEN = ACE_MAXLOGMSGLEN,
-    // Maximum size of a logging message.
 
+    /// Most restrictive alignment.
     ALIGN_WORDB  = 8,
-    // Most restrictive alignment.
 
+    /// Size used by verbose mode.
+    /// 20 (date) + 15 (host_name) + 10 (pid) + 10 (type)
+    ///           + 4 (@) ... + ? (progname)
     VERBOSE_LEN = 128,
-    // Size used by verbose mode.
-    // 20 (date) + 15 (host_name) + 10 (pid) + 10 (type) + 4 (@) ... +
-    // ? (progname)
 
+    /// Maximum size of a logging message with the verbose headers
     MAXVERBOSELOGMSGLEN = VERBOSE_LEN + MAXLOGMSGLEN
-    // Maximum size of a logging message with the verbose headers
   };
 
   // = Initialization
